k8s/mlflow/01-mlflow-postgres.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-postgresql-deployment
  labels:
    app: mlflow-postgresql
    app.kubernetes.io/part-of: mlflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow-postgresql
  template:
    metadata:
      labels:
        app: mlflow-postgresql
    spec:
      volumes:
        - name: postgresql-data
          persistentVolumeClaim:
            claimName: mlflow-postgresql-pvc
      containers:
        - name: postgresql
          image: 'quay.io/rh-aiservices-bu/postgresql-15-pgvector-c9s:latest'
          imagePullPolicy: IfNotPresent
          ports:
            - name: postgresql
              containerPort: 5432
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - /usr/libexec/check-container
                - '--live'
            initialDelaySeconds: 120
            periodSeconds: 10
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            exec:
              command:
                - /usr/libexec/check-container
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: postgresql-data
              mountPath: /var/lib/pgsql/data
      restartPolicy: Always
  strategy:
    type: Recreate
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow-postgresql-service
  labels:
    app: mlflow-postgresql
spec:
  type: ClusterIP
  selector:
    app: mlflow-postgresql
  ports:
    - name: postgresql
      protocol: TCP
      port: 5432
      targetPort: postgresql
