k8s/mlflow/03-mlflow-server.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-deployment
  labels:
    app: mlflow
    app.kubernetes.io/part-of: mlflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      volumes:
        - name: shared-data
          emptyDir: {}
      containers:
      - name: mlflow
        image: 'ghcr.io/mlflow/mlflow:v3.11.1-full'
        imagePullPolicy: Always
        command:
          - /bin/bash
          - -c
        args:
          - |
            [...]
        volumeMounts:
          - name: shared-data
            mountPath: /shared
        ports:
          - name: api
            containerPort: 5000
            protocol: TCP
        startupProbe:
          httpGet:
            path: /
            port: api
            scheme: HTTP
            httpHeaders:
              - name: Host
                value: mlflow-service
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 30
        livenessProbe:
          httpGet:
            path: /
            port: api
            scheme: HTTP
            httpHeaders:
              - name: Host
                value: mlflow-service
          initialDelaySeconds: 60
          periodSeconds: 30
          timeoutSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: api
            scheme: HTTP
            httpHeaders:
              - name: Host
                value: mlflow-service
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
        resources:
          limits:
            cpu: "2"
            memory: "2Gi"
          requests:
            cpu: "500m"
            memory: "1Gi"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow-service
  labels:
    app: mlflow
spec:
  ports:
    - name: api
      protocol: TCP
      port: 5000
      targetPort: api
  selector:
    app: mlflow
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mlflow-route
  labels:
    app: mlflow
spec:
  port:
    targetPort: api
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: mlflow-service
    weight: 100
  wildcardPolicy: None
